@@ -1,0 +1,4 @@
+MD5 bea5158163ebee10b42f2a008cf660d7 /files/analog.cfg 3992
+MD5 2fb240fa271f7dd72dd56552f60729ab /files/analog-5.1-gentoo.diff 888
+MD5 eed601522fbf4955838f47fa108083db /analog-5.32.ebuild 1377
+MD5 077a2d43c8f5c2bddf37129ca63ec1f8 analog-5.32.tar.gz 1428349
